# dlx

./: .gitattributes  .gitignore  MANIFEST.in  README.md  _version.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
dlx/: __init__.py
dlx/experiments/: __init__.py  simple_linear.py
dlx/experiments/notebooks/: simple_linear_model.ipynb
dlx/modules/: __init__.py  layernorm.py  linear.py  transformer.py
dlx/nn/: module.py  optim.py  tensor.py
dlx/tests/core_tests/test_activation_ops.py/: test_gelu.py  test_relu.py  test_sigmoid.py  test_softmax.py
dlx/tests/core_tests/test_losses/: test_bce.py  test_ce.py  test_mse.py
dlx/tests/core_tests/test_primitive_ops/: test_add.py  test_div.py  test_exponentials.py  test_matmul.py  test_mul.py  test_power.py  test_sub.py  test_test_shaping.py
dlx/tests/core_tests/test_reductions/: test_mean.py  test_min_max.py  test_sum.py
dlx/tests/test_modules/: test_embedding.py  test_layernorm.py  test_linear.py
dlx/tests/test_optim/: test_adamw.py
dlx/tests/transformer/: test_attend.py  test_transformer.py
dlx/utils/: __init__.py  backend.py
experiments/: transformer_implementation.py
experiments/notebooks/: test_transformer.ipynb
inference/: __init__.py  generate.py
modules/: embedding.py  layernorm.py  linear.py  torch_transformer.py  transformer.py
nn/: __init__.py  losses.py  module.py  optim.py  tensor.py
tests/core_tests/test_activation_ops/: test_dropout.py  test_gelu.py  test_relu.py  test_sigmoid.py  test_softmax.py
tests/core_tests/test_device/: test_default_device.py  test_device_class.py  test_tensor_device.py
tests/core_tests/test_losses/: test_bce.py  test_ce.py  test_mse.py
tests/core_tests/test_primitive_ops/: test_add.py  test_div.py  test_exponentials.py  test_matmul.py  test_mul.py  test_power.py  test_sub.py  test_test_shaping.py
tests/core_tests/test_reductions/: test_mean.py  test_min_max.py  test_sum.py
tests/test_modules/: test_embedding.py  test_layernorm.py  test_linear.py
tests/test_optim/: test_adamw.py
tests/transformer/: test_attend.py  test_transformer.py
utils/: backend.py  logger.py  lr_scheduler.py
